--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
             right: 4px !important;
             transform: translateY(-50%);
         }
+
+        .filter__modal__content {
+            height: 60vh;
+        }
     </style>
     <div class="filter__modal micromodal__slide" id="filter__modal" style="display:block;opacity:1;pointer-events:all;">
         <div class="filter__modal__overlay micromodal__overlay" data-micromodal-close="">
