--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
             transition: background-color .35s;
 
-            -webkit-mask: url("/themes/lkbroker/image/question.svg") center / cover no-repeat;
-            mask: url("/themes/lkbroker/image/question.svg") center / cover no-repeat;
+            -webkit-mask: url("./themes/lkbroker/image/question.svg") center / cover no-repeat;
+            mask: url("./themes/lkbroker/image/question.svg") center / cover no-repeat;
             
             transition: background-color .35s;
         }
