--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
                                                 <div class="item" data-val="1">Гараж</div>
                                                 <div class="item" data-val="2">Гостевая парковка</div>
                                                 <div class="item" data-val="3">Навес для авто</div>
-                                                <div class="item" data-val="4">Исплючительно без гаража</div>
+                                                <div class="item" data-val="4">Исключить без парковки</div>
                                             </div>
                                         </div>
                                     </div>
@@ -1572,7 +1572,7 @@
                                             <div class="content-field">
                                                 <div class="item" data-val="1">Отдельностоящий</div>
                                                 <div class="item" data-val="2">Соединен с домом</div>
-                                                <div class="item" data-val="3">Исплючительно без гаража</div>
+                                                <div class="item" data-val="3">Исключить без гаража</div>
                                             </div>
                                         </div>
                                     </div>
