--- a/index.html
+++ b/index.html
@@ -1696,7 +1696,7 @@
                                     <div class="ft__field__content">
                                         <div class="filter-field line-check" data-type="subtype">
                                             <div class="content-field">
-                                                <div class="item" data-val="1">Водоем на участке</div>
+                                                <div class="item" data-val="1">Ландшафтный дизайн</div>
                                                 <div class="item" data-val="2">Благоустроен</div>
                                                 <div class="item" data-val="3">Газон</div>
                                             </div>
