--- a/index.html
+++ b/index.html
@@ -1343,12 +1343,6 @@
                                                 <div class="item" data-val="3">3+</div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-    
-                                <div class="ft__field__line">
-                                    <div class="ft__field__label">Ограничения</div>
-                                    <div class="ft__field__content">
                                         <div class="filter-field line-check">
                                             <div class="content-field">
                                                 <div class="item" data-val="1">Без цокольного этажа</div>
@@ -1364,7 +1358,7 @@
     
                                 <!-- Комнат -->
                                 <div class="ft__field__line">
-                                    <div class="ft__field__label">Комнат</div>
+                                    <div class="ft__field__label">Спален</div>
                                     <div class="ft__field__content">
                                         <div class="filter-field line-check mutliply" data-type="decor">
                                             <div class="content-field">
@@ -1374,15 +1368,6 @@
                                                 <div class="item" data-val="4">4</div>
                                                 <div class="item" data-val="5">5</div>
                                                 <div class="item" data-val="6">Свободная планировка</div>
-                                            </div>
-                                        </div>
-                                        <!-- Спальни -->
-                                        <div class="ft__field__subline">
-                                            <div class="filter-field checkbox">
-                                                <div class="content-field">
-                                                    <input type="checkbox" name="pricetype" value="" checked>
-                                                    <label>Искать только спальни</label>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -1503,17 +1488,7 @@
                                         </div>
                                         <div class="filter-field line-check">
                                             <div class="content-field">
-                                                <div class="item" data-val="1">Видовые</div>
-                                            </div>
-                                        </div>
-                                        <div class="filter-field line-check">
-                                            <div class="content-field">
                                                 <div class="item" data-val="1">Гостевой дом</div>
-                                            </div>
-                                        </div>
-                                        <div class="filter-field line-check">
-                                            <div class="content-field">
-                                                <div class="item" data-val="1">Два входа</div>
                                             </div>
                                         </div>
                                         <div class="filter-field line-check">
@@ -1608,11 +1583,8 @@
                                         <div class="filter-field number-list">
                                             <div class="content-field">
                                                 <div class="from">
-                                                    <input type="text" placeholder="от" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
-                                                </div>
-                                                <div class="to">
                                                     <span class="ft__field__metric">кВТ</span>
-                                                    <input type="text" placeholder="до" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
+                                                    <input type="text" placeholder="от, кВТ" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
                                                 </div>
                                             </div>
                                         </div>
@@ -1956,11 +1928,8 @@
                                         <div class="filter-field number-list">
                                             <div class="content-field">
                                                 <div class="from">
-                                                    <input type="text" placeholder="от" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
-                                                </div>
-                                                <div class="to">
                                                     <span class="ft__field__metric">кВТ</span>
-                                                    <input type="text" placeholder="до, кВТ" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
+                                                    <input type="text" placeholder="от, кВТ" value="" data-maskjs="1" data-maskjs-scale="0" data-maskjs-min="10" data-maskjs-max="99999">
                                                 </div>
                                             </div>
                                         </div>
